@@ -20,18 +20,30 @@ DIST genpatches-3.10-67.extras.tar.xz 17816 SHA256 8252bf806ee326f5d65c5e908ee25
 DIST genpatches-3.10-68.base.tar.xz 1039020 SHA256 d643b50d3dbb80631b8d9c91447e710d088968a1b01b4d85dc8c060b9352f0bc SHA512 e906289519ac59370398c12154192ed75853dbd43106057366a11bb5bd51b3c5170b16370f76d8051f6cb3809e204a97754150fc2de44c0147e489ae795915ad WHIRLPOOL 51d4de7814c685c0d3a506b3cf93f301f67ef7e72536997268c76b1599dd2b29c2d5e311b0c07f7fa5559cc8916a1b9d18d1d0789dd08c4026a8ff247feed076
 DIST genpatches-3.10-68.experimental.tar.xz 48592 SHA256 b158b8c9fb78ff3a2d6803a1bc2d729557fccbb56506a2101736cc893e4da3e6 SHA512 faabd7136c733ca182190463a5c240b9fade76753c10985fbf3218f6d7e14a8037602878cc9197e0d266834d9a183c8b87c045c50f46ee4d427d9343ce78dcf7 WHIRLPOOL c4745558366319ae61650ea3db50749fcb354a50fd7bca50adceddcf2521b0e354dc9b53ec0cc0711013b275e36c78e6e3e3b6615c8b024ce35d807387fbc80b
 DIST genpatches-3.10-68.extras.tar.xz 17828 SHA256 fcee428cabfa8abcd589adf933b9f981ed0452800dd88d356419a9cd16fdef89 SHA512 2227d679e44d54c259d6f99976d4e141de878487f8deb5b142fe99216e3dc2e5e23d56581696786420f9fffbf28462d3b73645dcf420af96ca56d66d168124b8 WHIRLPOOL 3a65f1bef779e30d1594a848379c6a2d720369ba80ec3cb14a1917f80553e21fed349de4b90dd06c5e08410e8f0286bd6d9743e3a5224592d51535bc7f550fd3
+DIST genpatches-3.10-69.base.tar.xz 1049428 SHA256 afbf4262960396a6f78bf77877e4887597625b8889414e63630b404eec0118d9 SHA512 d2d62806da8eaf101f236b50f0ec32fcb9bbb3da95480d9d440509a19a387694a5acc903362269a693ae71b8591ae272298b6b8151f30d5894e383304b7da1ad WHIRLPOOL 9112a1a8f31ff076bad5f34f40e70359922a84453f111392c0bd17776116454a04550a759490567ca7b158d0654ea47129c094b7c583154dfb931046dcf1a760
+DIST genpatches-3.10-69.experimental.tar.xz 48600 SHA256 4a4cdbed0de93639fda2b7993117ec0b00258c1bc7f731337550ee2aa4180eb4 SHA512 e8e6dd5e5563dfdd89fc921cde2b073a4ea34e13e6c33faae3acbadb009d821830e099e8c077cac400a92d7ee7ba2a6c8126dff656f48391311632ad4683e767 WHIRLPOOL f5fca67318260f91bafea6e29fc61ac8a0bd09165d0e9d62c9249de6195e5e1d2d2230cdd430415087b9e0df949e79db9aed9fcaffa581e390020286bec8480e
+DIST genpatches-3.10-69.extras.tar.xz 17820 SHA256 83cdb1617bace0dcf24b0d09f22a42c32a892b2086bc96c1b61a2fdb663c5ca8 SHA512 c1b028ad1d31da1c28501492f0ad7c641d8709c332985da847ad8521586be965c13ebcf77fe2de105a4190b2ebb0b70863cbbcef9eb5c6fb853da09d1914694f WHIRLPOOL 83f33d4915975d56e1703fcc0d8dbc98de17f403942008296daba20a2774813a9f02c9d37c7cce5e99d9e60fed872dd78df7d8a3c602b5267d6bc5208a372651
 DIST genpatches-3.12-34.base.tar.xz 997560 SHA256 9a242380699e3e176f21a68ee43eeed99375fac35e34edfbcc23de7fd48a0aee SHA512 0aea3e42b0be0865e55e46aaf6b7ebd768a46ee735f15ed00a34a9a1072004e616a18a8c7a188632cb4d9f98518c4377819c64dbfc8fbd3018c33c6968daba4c WHIRLPOOL c2e43e450f47d62063a81e2502887ed7f37617199926dd79ee199bde7f56587bfc8e4f318e6f257c31c79107f849d93e63f7db5393c7b21b35219d43e44070bd
 DIST genpatches-3.12-34.experimental.tar.xz 46552 SHA256 5fdf0c883c58feda21ee9a3b807bd3aaf1f91c7ecc9f3cbb1052bc7ab7fe5933 SHA512 85e844ff772baa502ad4e4f083a8181e4d22d1485015163073fac67f72025eccc884ce8a95b985b210bd0dfa4905350ee008a2ef4fd9bff2941d96efe9f50526 WHIRLPOOL da98fc8d52822b59509ea7a62b8744d21c268133ec3e00d1d214075825c674e83c6e611c68908602dd018df912a341df123daa2c6e5a0b75b7d0c7f81104aefb
 DIST genpatches-3.12-34.extras.tar.xz 18204 SHA256 3773eb0b1e4c5df649ed84cfc93a5f2bc54b170d7a68628417772a14005e1e4e SHA512 3670e0bfddd62875b515a57217d2e860badb8b4919948f20c7db7e0aa04218f6acad7f2d8902777c46bc032fd5da19a134a64b4dd408d4c088749445ca4563b9 WHIRLPOOL 49b86193cdadf557e4ead6f21c6df053478fbd5f579ac0d03b705ca341701edf0a6f41102ed269498d516cf9478ca73964c71602008a25d5ac4f16eff08c8a11
+DIST genpatches-3.12-35.base.tar.xz 1073276 SHA256 fc64a2b56c889194cda2549a30ffbbb5e6231165c2724fed5cc1049cc3407cc7 SHA512 9eaef4ef6f9338b18cf54680734d13eef0f5f5f1c46ae0b7330af977e9e7b387558ca98bcccbb00baa7758b99be8f4818d4940490e2c42a8e9fe78e0698adb45 WHIRLPOOL b22851e7833fe9321a1a710a55ac481176c157bf7b594a6c22c1ff39daf1f2f4d3f12ca92c85af670fcfd582d67dd71bc34cdc0873ba62285ffccc5f3aa43bb9
+DIST genpatches-3.12-35.experimental.tar.xz 46524 SHA256 1ae0b4bf77d6b9965b351c686cfe62ffc2726a4f68ca7549d67406a4a6323909 SHA512 2a5f68b71db66990a2d5e475ead33b228d5c0071d43585f7e6e6408bc017f32510c21438c7bf2b3056e2a9d4dc2ca276c082ee95ef17d9c18ecaed16c04a0a90 WHIRLPOOL fc7a217ac5fc12653fdc189c19278fe2ffa8d6962686a2a0c01e2e5318f64178266b3d4dbe60ce30140eac5f301136e40e0bce5be6e70133f48dd9ff811df4f2
+DIST genpatches-3.12-35.extras.tar.xz 18208 SHA256 be47bd1f2ad2b1fe4c308c007ffe1ea1199e336579088fe6cfb8d49ca51a772b SHA512 e7a94a7b2755a8318fb08fdcd9868f24093921ead225941a562cb245c10a7faabb1710580dbcde3dc92669941fdf3c04a2f9c7afee76fa0f0dc5c0b6ad85e6de WHIRLPOOL ea025d84e9b9218f72de29d58e18efc6ad6c2615d68311c892e5c7e209b8aa31af0ea90ec88358e04b1f9b2ec9afcc4aae8b162b131ec301922479a9b8fbd787
 DIST genpatches-3.14-29.base.tar.xz 636908 SHA256 2b2f1f4cec536b879c070ddfa8fa1ef430550ad25051a377a9598a4305e3f926 SHA512 9ddc68907d87009ca561d8c41c7b460078bbd9a889f601610d4f09ed468f26a78a1f095c06425ba720172f20f8af693d32ac774dd1c5a28a3e4934da2299a780 WHIRLPOOL d1da7ab4ebfc24e75227be10b1f8a17ee537fb20bad0612a09be66cf6e242d76f075c342e68d4231c1a9fe3bd2e09595e052c9d6b9c0b05d6909dd22bbc4d21c
 DIST genpatches-3.14-29.experimental.tar.xz 51224 SHA256 02e428aae2c1b1844006488b7e9ed5ebbd93f869fa96e8e76bacc92f6b5fe255 SHA512 c84296d0450311900d1d3d3ef50ae58edf1e0b477ff73cfe443b66d84276ae94394d2eeac76a724f85e6f7db7e124dcd4365b53898dbf7c6df6447bedd84950b WHIRLPOOL 3233901dbd2e7932c8c33e78dcfee67eecfe9ff0cc98391af0eda66bf14261c978bdd8f0ca7161dcc393b409c79744c9e249b7dbd11bcf07c46b5387d9abedff
 DIST genpatches-3.14-29.extras.tar.xz 18236 SHA256 dc72cdb2e4538b919a6069774d40506500d9ab7b3400072690cf0ff6a03fc7af SHA512 f11c14d9c90d3db521a6a436e3a13e339b481b7d21831011bbce90c59501c797c252a45ffc53411c00d9094c0e833dd60348c43d24d29456dcdbcde3ab94babb WHIRLPOOL 3be403396c1093a7a925574c8d77f66702a9aa35135a354f8a81213936c8d409c661dc4731de19b72e69439dddba69bd07d61323d17e3221320e17aafef286b3
+DIST genpatches-3.14-31.base.tar.xz 705164 SHA256 3deeee4f0d2ea9a0e0e6a7a916846497bd85bfaeada61cf87c9f0cd132590242 SHA512 cc6c4d8ab3b10b31d5d9392596d903e4fb0e3a3574c6a5e14f2326ea33cfb371998436b08b5a352f3a0fabf1beb4e8288bda2169ff6952c4249e3272987ee910 WHIRLPOOL 35621b6856bfe9ee37fbfdb20ef85fd5cdafdf5cf35a5889b441e00589826827b6928d8512a4abc3dbb479d37a6904297422e49b9a1a6c63192e8ecdbd8385e6
+DIST genpatches-3.14-31.experimental.tar.xz 51208 SHA256 7179f92571fd8875258345b7d1de56941d20ea15b8bc82b64fc0a9fd4da891f5 SHA512 78f93d652aa838dac3e8ac6f2b61252153b7a96ee056cc9e1efacf1f100d5ae7f622f052daf50319bd34b828c4081ed1dda63709bc301bd694a2efb623c58249 WHIRLPOOL e4880a8aa0ffe84b80c4073100328357bd6430ee6f86b49b2e174ce117ad75a17c290a7250a5eb766d704a663f78a675daaf1a7052a634d6a6fe7d8b28f47e94
+DIST genpatches-3.14-31.extras.tar.xz 18236 SHA256 eca507723647492bafede4797d797a73aaf44fc4d0e7491570fdb0287b9ca920 SHA512 c26f8fb0a39ae88f40307d2944873816c3bcac1478e17cb34eb6f292f5cae451c1f29fe4110856da831d245ee22f1f3d76d91d4f68252945aa5f8a1c50426427 WHIRLPOOL 14119405ac8e6a85eea7935542913ae29eb40f09b634a6db4326012da625f3edaa01275cd07f17eda6b07765d5402c5e57575d0a8b91a217bf9babba3ade86d1
 DIST genpatches-3.17-6.base.tar.xz 175380 SHA256 22988517302e34da09593a9c05a5ac377ac1357f621e61c7638c8c7c17017c79 SHA512 35cb6ab41563975bc139f91a1d5de6944af51b4bf8cf6201cb685d39419539032918f1a7c9377d94dcd4de1e5015d08b3b50817fef96eaa23fe336f702f34267 WHIRLPOOL f6864f47867871343b8f9261b466c383881314fcdf8a4488964fdbce4c7ed685f3ddfceab71d461027ae4ad2a08f998c3f4ae4ae65f2c8d7d8d5e948dd303907
 DIST genpatches-3.17-6.experimental.tar.xz 59948 SHA256 ad4323baf089ff76fc5d129715d858d61bc8e98a498d4b5e8ee2696eff0f542c SHA512 1b5586e5d1d6f394bd658a81e070c2612365efdb637e72688f65b3fd1f6b209bb9ca70a1c17b6501ba93633e153eac99405e5caf2384e715256867d793ab22a0 WHIRLPOOL 6b193b2a005201a7df1110ba93d6806f96f03c85cb6d8335592ba41108d3c4979ab7b09686f5a26270a1637d497fdda23392333bd657350e9e6b076a7078116b
 DIST genpatches-3.17-6.extras.tar.xz 16156 SHA256 5c87aaa2a20327d0dff2639aab060e483c9e36a7517e14c359c95c98052f0f40 SHA512 ef21b4b7c59e393c5145895bd1d23fad1801baa4512fcdb381a03d9c8c916600f4718621a8aaeca7beda824bc0268f1dd84471158bfc6e3875d450cf034db685 WHIRLPOOL 8ab02a12aa245661376bb99d07b44987bcd3e79e68db78636105412b7c3a1fb269969ff921861a8092ce7a7a71a19789f0e206e097b48e1b6eaa3e10290ef6a3
 DIST genpatches-3.17-7.base.tar.xz 224836 SHA256 2c09c6ca8ed5df1f3e575f6fee9d5f2242608b24d980cdcb1ff576babaee676c SHA512 096a14ed9ba0a7b0cdc8bfc3e9d9df71bdb833c9df065d8ffed822519e77707d3db6bbeb60ba42406fadde5550a9c3181cdbb9e074cf6b28e09d2acdf5aad9c7 WHIRLPOOL a544e7b7be6d0ed73f3060ec77185d14e1d5e9e83805069818d25ee4b72267960f2e32fa6977dc1f2a11d0fba11cc28a828a9be576310d72c86c987b3235b8fc
 DIST genpatches-3.17-7.experimental.tar.xz 59940 SHA256 7c04ee99ad0aadce7e805bcbf3de3c45959428d3f4fff8c1028742f0d21a0f9c SHA512 7d4f124509c54413fefe6721ef147719da357425c9db0ce8f7ab5d8ca578f3955209e65d56e1447700923aa8ecd4c0563ee7ad899234f45bc1dc979bf61e6542 WHIRLPOOL 991b6b814652415080187c88a10b90ca8a7f46f28973b4ec3f465f8ce2def4264379fc980e0acbf08703c74d9c6134bc74921e9b961460d115e15e7807cb69dc
 DIST genpatches-3.17-7.extras.tar.xz 16156 SHA256 8c9e038c024cab108e1ea47692c5cd3538f57b69f9283a2c0c4219c49029271e SHA512 8c39b655704bea500252f08a555a07af7cfc21554f672accbe62fa46206deb25741f6f1878c31903beca20ba0d9cffe376a6ef127d0c321e99b654061ab9b446 WHIRLPOOL 25ea268ca91815b161927a68e4eda5762219b928f3bad903b3215a0156f460e06322eaca8a5e5ff8607a594d9bd5e3f06eb111bd4336493bf32d84b42fd76ef1
+DIST genpatches-3.17-9.base.tar.xz 259208 SHA256 daabaa1df13a8e3230d3559cf67e75590d315852cbf213a1fba9ecf2af7815ad SHA512 8aeea478a3e6de3dea75102bef25d5404e37491164289ccc85df41dd90eb3a1ebd7192a65dc73ba0b1c99e3538db706dcd5433e776e1d0cd522deae0ca8e752d WHIRLPOOL 9cfabb4b2459a46eb27bcca8c5eaa93cf1f2ff5a9aba5153e71e117aab21ff4cfee1d4a389dc375503378f7e8b0c3f0a9a5171416db6247ecf83a9f9e4a46a39
+DIST genpatches-3.17-9.experimental.tar.xz 59928 SHA256 941e6dfe36e042d23bb776551d44bbc28a7c01d760600481b1c97ec1c2a64508 SHA512 18cb771689e00b19a4a07966a0447f417c31a123d8f786a3b51f814b7769c362f931ad8e57f728e62ab4436f5282ba33626ad16e911b9dfb750da52ba18a467a WHIRLPOOL 873cc2ce8dbc47f4546703d2ff78109771f07927e0727664766fb07f9e18f6a97e2a3a2a6a591cd674774caf3aa5f5c59429119ccd17298c547956d743701bed
+DIST genpatches-3.17-9.extras.tar.xz 16160 SHA256 d23f013006f2aeecb92a1997c9912561527410abdcbccfd6572e16fa7b8c8465 SHA512 737c66d777d54139313c930449b3b0fe680141f192aea1d1063e585bec2846c90bf0ee2c15500f0386a8d82254085196819b493bb360e20ecc58fec2e6388a7e WHIRLPOOL e36e3ad36d93deaa5667e5cadbabd67029be4cb31247fa37c28dea90dc34eac40076dcb840d43e5d14420df9deb91fe1539dcb3bdd5c1b7a69cd0a1c1fbc546f
 DIST genpatches-3.4-87.base.tar.xz 1210220 SHA256 a2689a56e567805b5ed8e842c692c0cfded629bf2958ecc171b1d1ae3e5496b4 SHA512 ece2ab756f83101cfca81f4b7fff3335336428dbc4b98915c6526801c2051f961d0cf88dd3b9e6a1b925d758e379346ed913efbf8328f7108769588630d9fd60 WHIRLPOOL 0945380bd8df7772f42cefe970779a4f6cda42d77aa25f3043d34837729161bef15018daa96104872661c2171f7af6d2eccdfae2faa91bf29509f8a5190901c3
 DIST genpatches-3.4-87.extras.tar.xz 18208 SHA256 d1ffb428d8e9c3553dbc0bf078fc3b7d4c6f8d27e0e0fa5dd71385d84549a9fb SHA512 823a35f8e140b2553dbb8b8dad20dd100db80699bf0ac94b42f8b194141ed44f79ca69ce88ef343c2c9332568cabdb8281331fa5235d8da4d3a855bf4a3b230a WHIRLPOOL 95d5ac7047e14940c3e774a9694e344f114e135b74d3e43b0cf5a2da173c08594b2daa78d28aabd4b1c9fb8e29019e8111a51a19243f0a206c4f7abbf9e43f22
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
